# nix-rust-embassy-rs-example-project

./: Cargo.toml  LICENSE.md  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yml
nix/: devShells.nix  formatter-module.nix  formatter.nix  legacy-packages.nix  overlays.nix
src/: hardware.rs  main.rs  power.rs  string_controller.rs
